--- a/CNN_NLP.ipynb
+++ b/CNN_NLP.ipynb
@@ -95,6 +95,7 @@
         "from keras.layers.embeddings import Embedding\n",
         "from sklearn.model_selection import train_test_split\n",
         "from keras.preprocessing.text import Tokenizer"
+        "citation: https://stackabuse.com/python-for-nlp-word-embeddings-for-deep-learning-in-keras"
       ],
       "execution_count": 3,
       "outputs": [
