submission ready notebook

--- a/LSTM_NLP.ipynb
+++ b/LSTM_NLP.ipynb
@@ -82,6 +82,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "clmpETRxmXtJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "source:https://stackabuse.com/python-for-nlp-word-embeddings-for-deep-learning-in-keras"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "aJzIW_X8BDSj",
         "colab_type": "text"
       },
